# developer_salary_prediction

./: .gitignore  .pre-commit-config.yaml  Claude.md  Dockerfile  Makefile  README.md  app.py  debug_prepare_features.py  diagnose_encoding.py  example_inference.py  guardrail_evaluation.py  pyproject.toml  test_feature_impact.py  test_fix.py
.github/workflows/: ci.yml
config/: currency_rates.yaml  model_parameters.yaml  optuna_config.yaml  valid_categories.yaml
memory/: architecture.md  feature-workflow.md  make-targets.md  skills.md
models/: model.pkl
src/: __init__.py  infer.py  preprocess.py  preprocessing.py  schema.py  streamlit_app.py  train.py  tune.py
tests/: conftest.py  test_feature_impact.py  test_infer.py  test_preprocessing.py  test_schema.py  test_train.py  test_tune.py
